--- a/VidCoder/View/Panels/VideoPanel.xaml
+++ b/VidCoder/View/Panels/VideoPanel.xaml
@@ -19,7 +19,7 @@
 	</UserControl.Resources>
 	<Grid>
 		<Grid.ColumnDefinitions>
-			<ColumnDefinition Width="270" />
+			<ColumnDefinition Width="Auto" MinWidth="270" />
 			<ColumnDefinition />
 		</Grid.ColumnDefinitions>
 		<Grid.RowDefinitions>
@@ -28,12 +28,18 @@
 		</Grid.RowDefinitions>
 		<Grid Grid.Row="0" Grid.Column="0" Visibility="{Binding HasSourceData, Converter={StaticResource VisibilityConverter}}">
 			<Border
-				Margin="14,3,0,0" VerticalAlignment="Top" HorizontalAlignment="Left" Width="230"
+				Margin="10,3,0,0" VerticalAlignment="Top" HorizontalAlignment="Left" MinWidth="230"
 				Style="{StaticResource InputOutputInfoSection}"
 				Background="{StaticResource InputBrush}" Effect="{StaticResource InfoBoxShadow}">
 				<Grid>
-					<TextBlock Height="21" Width="38" HorizontalAlignment="Left" Margin="2,0,0,0" VerticalAlignment="Top" Text="Input" Style="{StaticResource SectionHeader}" />
-					<Grid Margin="50,0,0,0">
+					<Grid.ColumnDefinitions>
+						<ColumnDefinition Width="Auto" />
+						<ColumnDefinition />
+					</Grid.ColumnDefinitions>
+					<TextBlock
+						Grid.Column="0"
+						Height="21" HorizontalAlignment="Left" Margin="2,0,10,0" VerticalAlignment="Top" Text="{x:Static res:EncodingRes.Input}" Style="{StaticResource SectionHeader}" />
+					<Grid Grid.Column="1">
 						<Grid.RowDefinitions>
 							<RowDefinition Height="Auto" />
 							<RowDefinition Height="Auto" />
@@ -42,11 +48,11 @@
 						<Grid.ColumnDefinitions>
 							<ColumnDefinition Width="Auto" />
 							<ColumnDefinition Width="8" />
-							<ColumnDefinition Width="173*" />
+							<ColumnDefinition Width="Auto" />
 						</Grid.ColumnDefinitions>
-						<TextBlock Text="Type:" Grid.Row="0" Grid.Column="0" />
-						<TextBlock Text="Codec:" Grid.Row="1" Grid.Column="0" />
-						<TextBlock Text="Framerate:" Grid.Row="2" Grid.Column="0" />
+						<TextBlock Text="{x:Static res:EncodingRes.TypeLabel}" Grid.Row="0" Grid.Column="0" />
+						<TextBlock Text="{x:Static res:EncodingRes.ShortCodecLabel}" Grid.Row="1" Grid.Column="0" />
+						<TextBlock Text="{x:Static res:EncodingRes.ShortFramerateLabel}" Grid.Row="2" Grid.Column="0" />
 
 						<TextBlock Text="{Binding InputType}" Grid.Row="0" Grid.Column="2" />
 						<TextBlock Text="{Binding InputVideoCodec}" Grid.Row="1" Grid.Column="2" />
@@ -57,95 +63,138 @@
 		</Grid>
 		<Grid Grid.Row="1">
 			<TextBlock
-				Height="21" HorizontalAlignment="Left" Margin="21,12,0,0" Name="textBlock1" VerticalAlignment="Top" Width="63"
+				Height="21" HorizontalAlignment="Left" Margin="16,12,0,0" Name="textBlock1" VerticalAlignment="Top"
 				Text="Video"
 				Style="{StaticResource SectionHeader}"/>
 
-			<Label Height="28" HorizontalAlignment="Left" Margin="21,38.961,0,0" Name="label6" VerticalAlignment="Top" Width="102">Video Codec:</Label>
-			<Label Height="28" HorizontalAlignment="Left" Margin="21,73,0,0" Name="label13" VerticalAlignment="Top" Width="102">Framerate (FPS):</Label>
-			<ComboBox
-				Height="23" HorizontalAlignment="Left" Margin="123.876,43.956,0,0" VerticalAlignment="Top" Width="122"
-				ItemsSource="{Binding EncoderChoices}"
-				SelectedItem="{Binding SelectedEncoder}"
-				DisplayMemberPath="DisplayName" />
-			<ComboBox
-				Height="23" HorizontalAlignment="Left" Margin="123.876,78,0,0" VerticalAlignment="Top" Width="122"
-				ItemsSource="{Binding FramerateChoices}"
-				SelectedItem="{Binding SelectedFramerate}">
-				<ComboBox.ItemTemplate>
-					<DataTemplate>
-						<TextBlock Text="{Binding Converter={StaticResource FramerateDisplayConverter}}" />
-					</DataTemplate>
-				</ComboBox.ItemTemplate>
-			</ComboBox>
-			<RadioButton 
-				Content="Constant Framerate" Height="16" HorizontalAlignment="Left" Margin="124,112,0,0" Name="radioButton1" GroupName="constantFramerate1" VerticalAlignment="Top"
-				IsChecked="{Binding ConstantFramerate}"
-				Style="{StaticResource LongToolTipHolder}">
-				<RadioButton.ToolTip>
-					<TextBlock Text="{Binding ConstantFramerateToolTip}" Style="{StaticResource LongToolTip}" />
-				</RadioButton.ToolTip>
-			</RadioButton>
-			<RadioButton 
-				Content="{Binding VfrChoiceText}" Height="16" HorizontalAlignment="Left" Margin="124,135,0,0" Name="radioButton2" GroupName="constantFramerate2" VerticalAlignment="Top"
-				IsChecked="{Binding ConstantFramerate, Converter={StaticResource InverseBoolConverter}}"
-				Style="{StaticResource LongToolTipHolder}">
-				<RadioButton.ToolTip>
-					<TextBlock Text="{Binding VariableFramerateToolTip}" Style="{StaticResource LongToolTip}" />
-				</RadioButton.ToolTip>
-			</RadioButton>
+			<Grid Margin="21,35,0,0" VerticalAlignment="Top" HorizontalAlignment="Left">
+				<Grid.RowDefinitions>
+					<RowDefinition />
+					<RowDefinition />
+					<RowDefinition />
+					<RowDefinition />
+				</Grid.RowDefinitions>
+				<Grid.ColumnDefinitions>
+					<ColumnDefinition />
+					<ColumnDefinition Width="Auto" />
+				</Grid.ColumnDefinitions>
+				
+				<TextBlock 
+					Grid.Row="0" Grid.Column="0" VerticalAlignment="Center"
+					Text="{x:Static res:EncodingRes.CodecLabel}"  />
+				<ComboBox
+					Grid.Row="0" Grid.Column="1" Margin="5,4,0,4"
+					Height="23" HorizontalAlignment="Left" VerticalAlignment="Top" MinWidth="122"
+					ItemsSource="{Binding EncoderChoices}"
+					SelectedItem="{Binding SelectedEncoder}"
+					DisplayMemberPath="DisplayName" />
+
+				<TextBlock 
+					Grid.Row="1" Grid.Column="0" VerticalAlignment="Center"
+					Text="{x:Static res:EncodingRes.FramerateLabel}" />
+				<ComboBox
+					Grid.Row="1" Grid.Column="1" Margin="5,4,0,4"
+					Height="23" HorizontalAlignment="Left" VerticalAlignment="Top" MinWidth="122"
+					ItemsSource="{Binding FramerateChoices}"
+					SelectedItem="{Binding SelectedFramerate}">
+					<ComboBox.ItemTemplate>
+						<DataTemplate>
+							<TextBlock Text="{Binding Converter={StaticResource FramerateDisplayConverter}}" />
+						</DataTemplate>
+					</ComboBox.ItemTemplate>
+				</ComboBox>
+				<RadioButton 
+					Grid.Row="2" Grid.Column="1" Margin="5,0,0,8"
+					Content="{x:Static res:EncodingRes.ConstantFramerateRadioButton}" Height="16" HorizontalAlignment="Left" GroupName="constantFramerate1" VerticalAlignment="Top"
+					IsChecked="{Binding ConstantFramerate}"
+					Style="{StaticResource LongToolTipHolder}">
+					<RadioButton.ToolTip>
+						<TextBlock Text="{Binding ConstantFramerateToolTip}" Style="{StaticResource LongToolTip}" />
+					</RadioButton.ToolTip>
+				</RadioButton>
+				<RadioButton 
+					Grid.Row="3" Grid.Column="1" Margin="5,0,0,8"
+					Content="{Binding VfrChoiceText}" Height="16" HorizontalAlignment="Left" GroupName="constantFramerate2" VerticalAlignment="Top"
+					IsChecked="{Binding ConstantFramerate, Converter={StaticResource InverseBoolConverter}}"
+					Style="{StaticResource LongToolTipHolder}">
+					<RadioButton.ToolTip>
+						<TextBlock Text="{Binding VariableFramerateToolTip}" Style="{StaticResource LongToolTip}" />
+					</RadioButton.ToolTip>
+				</RadioButton>
+			</Grid>
 			
 			<CheckBox
-				Content="2-pass Encoding"
-				Height="16" HorizontalAlignment="Left" Margin="28,168,0,0" VerticalAlignment="Top"
+				Content="{x:Static res:EncodingRes.TwoPassEncodingCheckBox}"
+				Height="16" HorizontalAlignment="Left" Margin="28,161,0,0" VerticalAlignment="Top"
 				IsChecked="{Binding TwoPassEncoding}"
 				IsEnabled="{Binding TwoPassEncodingEnabled}"/>
 			<CheckBox
-				Content="Turbo first Pass"
-				Height="16" HorizontalAlignment="Left" Margin="49,191,0,0" VerticalAlignment="Top"
+				Content="{x:Static res:EncodingRes.TurboFirstPassCheckBox}"
+				Height="16" HorizontalAlignment="Left" Margin="49,184,0,0" VerticalAlignment="Top"
 				IsChecked="{Binding TurboFirstPass}"
 				IsEnabled="{Binding TurboFirstPassEnabled}"/>
 		</Grid>
 		<Grid Grid.Column="1" Grid.Row="0" Grid.RowSpan="2">
 			<TextBlock
-				Height="21" Margin="15,12,0,0" Name="textBlock3" VerticalAlignment="Top"
-				Text="Quality"
-				Style="{StaticResource SectionHeader}" HorizontalAlignment="Left" Width="66" />
+				Height="21" Margin="15,12,0,0" VerticalAlignment="Top"
+				Text="{x:Static res:EncodingRes.Quality}"
+				Style="{StaticResource SectionHeader}" HorizontalAlignment="Left" />
 
-			<RadioButton
-				Height="16" Margin="20,39,0,0" VerticalAlignment="Top" HorizontalAlignment="Left" Width="120" GroupName="VideoQuality"
-				IsChecked="{Binding VideoEncodeRateType, Converter={StaticResource EnumBoolConverter}, ConverterParameter=TargetSize}">Target Size (MB)</RadioButton>
-			<controls:NumberBox
-				Height="23" HorizontalAlignment="Left" Margin="146,36,0,0" VerticalAlignment="Top" Width="62"
-				Number="{Binding TargetSize, Mode=TwoWay}" Minimum="0"
-				AllowEmpty="False" IsEnabled="{Binding VideoEncodeRateType, Converter={StaticResource EnumBoolConverter}, ConverterParameter=TargetSize}"
-				Visibility="{Binding VideoEncodeRateType, Converter={StaticResource EnumVisibilityInverseConverter}, ConverterParameter=ConstantQuality}"/>
+			<Grid 
+				Margin="20,33,0,0" HorizontalAlignment="Left" VerticalAlignment="Top">
+				<Grid.RowDefinitions>
+					<RowDefinition Height="29" />
+					<RowDefinition Height="29" />
+					<RowDefinition Height="29" />
+				</Grid.RowDefinitions>
+				<Grid.ColumnDefinitions>
+					<ColumnDefinition Width="Auto" />
+					<ColumnDefinition />
+				</Grid.ColumnDefinitions>
+				<RadioButton
+					Grid.Row="0" Grid.Column="0"
+					Height="16" VerticalAlignment="Center" HorizontalAlignment="Left" GroupName="VideoQuality"
+					IsChecked="{Binding VideoEncodeRateType, Converter={StaticResource EnumBoolConverter}, ConverterParameter=TargetSize}"
+					Content="{x:Static res:EncodingRes.TargetSizeRadioButton}"/>
+				<controls:NumberBox
+					Grid.Row="0" Grid.Column="1"
+					Height="23" HorizontalAlignment="Left" VerticalAlignment="Center" Width="62" Margin="8,0,0,0"
+					Number="{Binding TargetSize, Mode=TwoWay}" Minimum="0"
+					AllowEmpty="False" IsEnabled="{Binding VideoEncodeRateType, Converter={StaticResource EnumBoolConverter}, ConverterParameter=TargetSize}"
+					Visibility="{Binding VideoEncodeRateType, Converter={StaticResource EnumVisibilityInverseConverter}, ConverterParameter=ConstantQuality}"/>
 
-			<RadioButton
-				Height="16" Margin="20,66.6,0,0" VerticalAlignment="Top" HorizontalAlignment="Left" Width="120" GroupName="VideoQuality"
-				IsChecked="{Binding VideoEncodeRateType, Converter={StaticResource EnumBoolConverter}, ConverterParameter=AverageBitrate}">Avg Bitrate (kbps)</RadioButton>
-			<controls:NumberBox
-				Height="23" HorizontalAlignment="Left" Margin="146,65,0,0" VerticalAlignment="Top" Width="62"
-				Number="{Binding VideoBitrate, Mode=TwoWay}" Minimum="100" ShowIncrementButtons="False"
-				AllowEmpty="False" IsEnabled="{Binding VideoEncodeRateType, Converter={StaticResource EnumBoolConverter}, ConverterParameter=AverageBitrate}"
-				Visibility="{Binding VideoEncodeRateType, Converter={StaticResource EnumVisibilityInverseConverter}, ConverterParameter=ConstantQuality}"/>
+				<RadioButton
+					Grid.Row="1" Grid.Column="0"
+					Height="16" VerticalAlignment="Center" HorizontalAlignment="Left" GroupName="VideoQuality"
+					IsChecked="{Binding VideoEncodeRateType, Converter={StaticResource EnumBoolConverter}, ConverterParameter=AverageBitrate}"
+					Content="{x:Static res:EncodingRes.AverageBitrateRadioButton}"/>
+				<controls:NumberBox
+					Grid.Row="1" Grid.Column="1"
+					Height="23" HorizontalAlignment="Left" VerticalAlignment="Center" Width="62" Margin="8,0,0,0"
+					Number="{Binding VideoBitrate, Mode=TwoWay}" Minimum="100" ShowIncrementButtons="False"
+					AllowEmpty="False" IsEnabled="{Binding VideoEncodeRateType, Converter={StaticResource EnumBoolConverter}, ConverterParameter=AverageBitrate}"
+					Visibility="{Binding VideoEncodeRateType, Converter={StaticResource EnumVisibilityInverseConverter}, ConverterParameter=ConstantQuality}"/>
 
-			<RadioButton
-				Height="16" Margin="20,99,0,0" VerticalAlignment="Top" HorizontalAlignment="Left" Width="120" GroupName="VideoQuality"
-				IsChecked="{Binding VideoEncodeRateType, Converter={StaticResource EnumBoolConverter}, ConverterParameter=ConstantQuality}">
-				<RadioButton.ToolTip>
-					<TextBlock Text="{x:Static res:EncodingRes.Video_QualityTargetToolTip}" Style="{StaticResource LargeToolTip}" />
-				</RadioButton.ToolTip>
-				Constant Quality
-			</RadioButton>
-			<controls:NumberBox
-				Height="23" HorizontalAlignment="Left" Margin="146,94,0,0" VerticalAlignment="Top" Width="49"
-				Number="{Binding Quality, Mode=TwoWay}" Minimum="0" Maximum="51" Modulus="0.1"
-				Visibility="{Binding VideoEncodeRateType, Converter={StaticResource EnumVisibilityConverter}, ConverterParameter=ConstantQuality}">
-				<controls:NumberBox.ToolTip>
-					<TextBlock Text="{x:Static res:EncodingRes.Video_QualityTargetToolTip}" Style="{StaticResource LargeToolTip}" />
-				</controls:NumberBox.ToolTip>
-			</controls:NumberBox>
+				<RadioButton
+					Grid.Row="2" Grid.Column="0"
+					Height="16" VerticalAlignment="Center" HorizontalAlignment="Left" GroupName="VideoQuality"
+					IsChecked="{Binding VideoEncodeRateType, Converter={StaticResource EnumBoolConverter}, ConverterParameter=ConstantQuality}"
+					Content="{x:Static res:EncodingRes.ConstantQualityRadioButton}">
+					<RadioButton.ToolTip>
+						<TextBlock Text="{x:Static res:EncodingRes.Video_QualityTargetToolTip}" Style="{StaticResource LargeToolTip}" />
+					</RadioButton.ToolTip>
+				</RadioButton>
+				<controls:NumberBox
+					Grid.Row="2" Grid.Column="1"
+					Height="23" HorizontalAlignment="Left" VerticalAlignment="Center" Width="49" Margin="8,0,0,0"
+					Number="{Binding Quality, Mode=TwoWay}" Minimum="0" Maximum="51" Modulus="0.1"
+					Visibility="{Binding VideoEncodeRateType, Converter={StaticResource EnumVisibilityConverter}, ConverterParameter=ConstantQuality}">
+					<controls:NumberBox.ToolTip>
+						<TextBlock Text="{x:Static res:EncodingRes.Video_QualityTargetToolTip}" Style="{StaticResource LargeToolTip}" />
+					</controls:NumberBox.ToolTip>
+				</controls:NumberBox>
+			</Grid>
+
 			<Slider
 				Height="22" Margin="20,121,6,0" VerticalAlignment="Top"
 				TickPlacement="BottomRight" Minimum="{Binding QualitySliderMin}" Maximum="{Binding QualitySliderMax}" TickFrequency="1" IsSnapToTickEnabled="True"
@@ -156,21 +205,20 @@
 				</Slider.ToolTip>
 			</Slider>
 			<TextBlock
-				Height="21" Margin="20.2,149,0,0" VerticalAlignment="Top" HorizontalAlignment="Left" Width="90.8" TextAlignment="Left"
+				Height="21" Margin="20.2,149,0,0" VerticalAlignment="Top" HorizontalAlignment="Left" TextAlignment="Left"
 				Text="{Binding QualitySliderLeftText}"
 				Visibility="{Binding VideoEncodeRateType, Converter={StaticResource EnumVisibilityConverter}, ConverterParameter=ConstantQuality}"/>
 			<TextBlock
-				Height="21" HorizontalAlignment="Right" Margin="0,149,6,0" VerticalAlignment="Top" Width="93" TextAlignment="Right"
+				Height="21" HorizontalAlignment="Right" Margin="0,149,6,0" VerticalAlignment="Top" TextAlignment="Right"
 				Text="{Binding QualitySliderRightText}"
 				Visibility="{Binding VideoEncodeRateType, Converter={StaticResource EnumVisibilityConverter}, ConverterParameter=ConstantQuality}"/>
 			<Grid
-				Height="135" Margin="6,179,15,0" Name="grid1" VerticalAlignment="Top"
+				Height="135" Margin="6,179,15,0" VerticalAlignment="Top"
 				Visibility="{Binding X264SettingsVisible, Converter={StaticResource VisibilityConverter}}">
 				<TextBlock
-					Height="21" HorizontalAlignment="Left" Margin="10,10,0,0" Style="{StaticResource SectionHeader}" Text="x264 Basic Settings" VerticalAlignment="Top" Width="119" />
-				
+					Height="21" HorizontalAlignment="Left" Margin="10,10,0,0" Style="{StaticResource SectionHeader}" Text="{x:Static res:EncodingRes.X264BasicSettings}" VerticalAlignment="Top" />
 
-				<Grid Height="100" HorizontalAlignment="Left" Margin="14,30,0,0" Name="grid2" VerticalAlignment="Top" Width="175">
+				<Grid Height="100" HorizontalAlignment="Left" Margin="14,30,0,0" VerticalAlignment="Top">
 					<Grid.RowDefinitions>
 						<RowDefinition />
 						<RowDefinition />
@@ -178,13 +226,13 @@
 					</Grid.RowDefinitions>
 					<Grid.ColumnDefinitions>
 						<ColumnDefinition Width="Auto" />
-						<ColumnDefinition />
+						<ColumnDefinition Width="Auto" />
 					</Grid.ColumnDefinitions>
 					<Label
-						Content="Profile:" Height="28"
-						Grid.Row="0" Grid.Column="0"  />
+						Content="{x:Static res:EncodingRes.ProfileLabel}" Height="28"
+						Grid.Row="0" Grid.Column="0" />
 					<ComboBox
-						Height="23" Width="120"
+						Height="23" MinWidth="120" Margin="3,0,0,0"
 						Grid.Row="0" Grid.Column="1"
 						Style="{StaticResource LongToolTipHolder}"
 						ItemsSource="{Binding X264ProfileChoices}" SelectedValue="{Binding X264Profile}" SelectedValuePath="Value" DisplayMemberPath="Display">
@@ -194,10 +242,10 @@
 					</ComboBox>
 
 					<Label
-						Content="Preset:" Height="28"
+						Content="{x:Static res:EncodingRes.PresetLabel}" Height="28"
 						Grid.Row="1" Grid.Column="0" />
 					<ComboBox
-						Height="23" Width="120"
+						Height="23" MinWidth="120" Margin="3,0,0,0"
 						Grid.Row="1" Grid.Column="1"
 						Style="{StaticResource LongToolTipHolder}"
 						ItemsSource="{Binding X264PresetChoices}" SelectedValue="{Binding X264Preset}" SelectedValuePath="Value" DisplayMemberPath="Display">
@@ -207,10 +255,10 @@
 					</ComboBox>
 
 					<Label
-						Content="Tune:" Height="28"
+						Content="{x:Static res:EncodingRes.TuneLabel}" Height="28"
 						Grid.Row="2" Grid.Column="0"/>
 					<ComboBox
-						Height="23" Width="120"
+						Height="23" MinWidth="120" Margin="3,0,0,0"
 						Grid.Row="2" Grid.Column="1"
 						Style="{StaticResource LongToolTipHolder}"
 						ItemsSource="{Binding X264TuneChoices}" SelectedValue="{Binding X264Tune}" SelectedValuePath="Value" DisplayMemberPath="Display">
