--- a/VidCoder/View/LogWindow.xaml
+++ b/VidCoder/View/LogWindow.xaml
@@ -1,7 +1,9 @@
 ﻿<Window x:Class="VidCoder.View.LogWindow"
 		xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 		xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-		Title="Log" Height="393" Width="459"
+		xmlns:prop="clr-namespace:VidCoder.Properties"
+		xmlns:res="clr-namespace:VidCoder.LocalResources" 
+		Title="{x:Static res:LogRes.LogWindowTitle}" Height="393" Width="459"
 		Style="{StaticResource NormalWindow}"
 		WindowStyle="ToolWindow" ShowInTaskbar="False" Closing="Window_Closing"
 		MinWidth="220" MinHeight="95">
@@ -25,17 +27,17 @@
 			</FlowDocument>
 		</RichTextBox>
 		<Button
-			Height="24" HorizontalAlignment="Right" Margin="0,0,127,7" Name="copyButton" VerticalAlignment="Bottom" Width="68"
+			Height="24" HorizontalAlignment="Right" Margin="0,0,127,7" Name="copyButton" VerticalAlignment="Bottom" MinWidth="68"
 			Command="{Binding CopyCommand}">
-			<StackPanel Orientation="Horizontal">
+			<StackPanel Orientation="Horizontal" Margin="5,0,5,0">
 				<Image Source="/Icons/copy.png" Width="16" Height="16" />
-				<TextBlock Text="Copy" Margin="4,0,0,0" />
+				<TextBlock Text="{x:Static res:LogRes.CopyButton}" Margin="4,0,0,0" />
 			</StackPanel>
 		</Button>
 
 		<Button
-			Content="Clear"
+			Content="{x:Static res:LogRes.ClearButton}"
 			Command="{Binding ClearLogCommand}"
-			Height="23" HorizontalAlignment="Right" Margin="0,0,12,7" VerticalAlignment="Bottom" Width="75" />
+			Height="23" HorizontalAlignment="Right" Margin="0,0,12,7" VerticalAlignment="Bottom" MinWidth="75" />
 	</Grid>
 </Window>
