--- a/VidCoder/View/AddAutoPauseProcessDialog.xaml
+++ b/VidCoder/View/AddAutoPauseProcessDialog.xaml
@@ -1,16 +1,29 @@
-﻿<Window x:Class="VidCoder.View.AddAutoPauseProcessDialog"
-		xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-		xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-		Title="Add Auto Pause Process" Height="371" Width="400" MinHeight="244" MinWidth="244" Closing="Window_Closing" WindowStartupLocation="CenterOwner">
+﻿<Window 
+	x:Class="VidCoder.View.AddAutoPauseProcessDialog"
+	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+	xmlns:prop="clr-namespace:VidCoder.Properties"
+	xmlns:res="clr-namespace:VidCoder.LocalResources" 
+	Title="{x:Static res:MiscRes.AddAutoPauseProcessDialogTitle}" Height="371" Width="400" MinHeight="244" MinWidth="244" Closing="Window_Closing" WindowStartupLocation="CenterOwner">
 	<Grid>
-		<Label Content="Process Name:" Height="28" HorizontalAlignment="Left" Margin="7,12,0,0" Name="label1" VerticalAlignment="Top" />
-		<TextBox
-			Height="23" Margin="101,14,17,0" Name="textBox1" VerticalAlignment="Top"
-			Text="{Binding ProcessName}"/>
+		<Grid
+			Margin="7,12,12,0" VerticalAlignment="Top">
+			<Grid.ColumnDefinitions>
+				<ColumnDefinition Width="Auto" />
+				<ColumnDefinition />
+			</Grid.ColumnDefinitions>
+			<Label 
+				Grid.Column="0"
+				Content="{x:Static res:MiscRes.ProcessNameLabel}" HorizontalAlignment="Left" VerticalAlignment="Center" />
+			<TextBox
+				Grid.Column="1"
+				Height="23" VerticalAlignment="Center"
+				Text="{Binding ProcessName}"/>
+		</Grid>
 		
-		<TextBlock Height="23" Margin="12,55,12,0" Name="textBlock1" Text="Choose from existing processes:" VerticalAlignment="Top" />
+		<TextBlock Height="23" Margin="12,55,12,0" Text="{x:Static res:MiscRes.ChooseFromProcessesLabel}" VerticalAlignment="Top" />
 		<ListBox
-			Margin="12,75,17,73" Name="listBox1"
+			Margin="12,75,17,73"
 			ItemsSource="{Binding CurrentProcesses}"
 			SelectedItem="{Binding SelectedProcess}">
 			<ListBox.ItemContainerStyle>
@@ -21,14 +34,18 @@
 
 		</ListBox>
 		<Button
-			Content="Refresh" Height="23" HorizontalAlignment="Left" Margin="12,0,0,44" Name="button3" VerticalAlignment="Bottom" Width="75"
+			Content="{x:Static res:MiscRes.RefreshButton}" Height="23" HorizontalAlignment="Left" Margin="12,0,0,44" VerticalAlignment="Bottom" MinWidth="75"
 			Command="{Binding RefreshCurrentProcessesCommand}"/>
-		
-		<Button
-			Content="Add" Height="23" HorizontalAlignment="Right" Margin="0,0,93,12" Name="button1" VerticalAlignment="Bottom" Width="75"
-			Command="{Binding AcceptCommand}"/>
-		<Button
-			Content="Cancel" Height="23" HorizontalAlignment="Right" Margin="0,0,12,12" Name="button2" VerticalAlignment="Bottom" Width="75"
-			Command="{Binding CancelCommand}"/>
+
+		<StackPanel
+			Orientation="Horizontal"
+			HorizontalAlignment="Right" Margin="0,0,12,12" VerticalAlignment="Bottom">
+			<Button
+				Height="23" HorizontalAlignment="Right" VerticalAlignment="Bottom" MinWidth="75" IsDefault="True"
+				Command="{Binding AcceptCommand}" Margin="0,0,6,0" Content="{x:Static res:MiscRes.AddButton}" />
+			<Button
+				Height="23" HorizontalAlignment="Right" VerticalAlignment="Bottom" MinWidth="75" IsCancel="True"
+				Command="{Binding CancelCommand}" Content="{x:Static prop:Resources.Cancel}" />
+		</StackPanel>
 	</Grid>
 </Window>
