--- a/VidCoder/View/LogWindow.xaml
+++ b/VidCoder/View/LogWindow.xaml
@@ -29,9 +29,9 @@
 		<Button
 			Height="24" HorizontalAlignment="Right" Margin="0,0,127,7" Name="copyButton" VerticalAlignment="Bottom" MinWidth="68"
 			Command="{Binding CopyCommand}">
-			<StackPanel Orientation="Horizontal" Margin="5,0,5,0">
+			<StackPanel Orientation="Horizontal" Margin="5,0">
 				<Image Source="/Icons/copy.png" Width="16" Height="16" />
-				<TextBlock Text="{x:Static res:LogRes.CopyButton}" Margin="4,0,0,0" />
+				<TextBlock Text="{x:Static prop:Resources.Copy}" Margin="4,0,0,0" />
 			</StackPanel>
 		</Button>
 
